add: primo paragrafo

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <header>
         <h1>Hello World</h1>
     </header>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam expedita illum vel rerum quae quia quos quo autem. Laudantium fuga impedit ex sunt distinctio voluptatum dolore, numquam recusandae amet architecto!</p>
+    </div>
+
 </body>
 </html>
